# ceutil

./: .gitattributes  .gitignore  CMakeCPack.txt  CMakeLists.txt  CMakeM1.txt  Dockerfile  LICENSE  README.md  ceUtil.sh  ceutil.sh  ceutilw.bat  test.sh  testw.bat
.github/workflows/: cmake.yml
ceUtil/: ceUtil.sln  ceUtil.vcxproj  ceUtil.vcxproj.filters  ceutil.vcxproj  ceutil.vcxproj.filters
ceutilvs/: ceutil.sln  ceutil.vcxproj
examples/: CMakeLists.txt  buildall.sh  buildallw.bat
examples/I2C/: CMakeLists.txt
examples/I2C/src/: I2C.cpp
examples/Log/: CMakeLists.txt  Log.sh  Logw.bat
examples/Log/Log/: Log.sln  Log.vcxproj  Log.vcxproj.filters
examples/Log/src/: Log.cpp
examples/Log/vsprj/: Log.sln  Log.vcxproj.filters
examples/Modbus/: CMakeLists.txt  Modbusw.bat
examples/Modbus/Modbus/: Modbus.sln  Modbus.vcxproj  Modbus.vcxproj.filters
examples/Modbus/src/: Modbus.cpp
examples/Modbus/vsprj/: Modbus.sln  Modbus.vcxproj  Modbus.vcxproj.filters
examples/ModbusCmd/: CMakeLists.txt  modbuscmdw.bat
examples/ModbusCmd/ModbusCmd/: ModbusCmd.sln  ModbusCmd.vcxproj  ModbusCmd.vcxproj.filters
examples/ModbusCmd/src/: ModbusCmd.cpp
examples/Serial/: CMakeLists.txt  serialw.bat
examples/Serial/Serial/: Serial.sln  Serial.vcxproj  Serial.vcxproj.filters
examples/Serial/src/: Serial.cpp
examples/Serial/vsprj/: Serial.sln  Serial.vcxproj  Serial.vcxproj.filters
examples/SerialGui/: CMakeLists.txt  serialguiw.bat
examples/SerialGui/SerialGui/: SerialGui.sln  SerialGui.vcxproj  SerialGui.vcxproj.filters
examples/SerialGui/src/: SerialGui.cpp
examples/Timer/: CMakeLists.txt  timerw.bat
examples/Timer/Timer/: Timer.sln  Timer.vcxproj  Timer.vcxproj.filters
examples/Timer/src/: Timer.cpp
examples/UDP/: CMakeLists.txt  UDPw.bat
examples/UDP/src/: UDP.cpp
examples/WxSerial/: CMakeLists.txt  wxserialw.bat
examples/WxSerial/src/: WxSerial.cpp
examples/interface/: CMakeLists.txt  interface.bat
examples/interface/src/: main.cpp
examples/interface/vsprj/: interface.sln  interface.vcxproj
examples/kbhit/: CMakeLists.txt  kbhitw.bat
examples/kbhit/kbhit/: kbhit.sln  kbhit.vcxproj  kbhit.vcxproj.filters
examples/kbhit/src/: main.cpp
examples/kbhit/vsprj/: kbhit.sln
examples/rsakeygen/: CMakeLists.txt  rsakeygenw.bat
examples/rsakeygen/rsakeygen/: rsakeygen.sln  rsakeygen.vcxproj
examples/rsakeygen/src/: rsakeygen.cpp
examples/rsakeygen/vsprj/: rsakeygen.sln  rsakeygen.vcxproj
examples/tcpclient/: CMakeLists.txt  tcpclientw.bat
examples/tcpclient/src/: tcpclient.cpp
examples/tcpclient/tcpclient/: tcpclient.sln  tcpclient.vcxproj
examples/tcpsvr/: CMakeLists.txt  tcpsvrw.bat
examples/tcpsvr/src/: tcpsvr.cpp
examples/tcpsvr/tcpsvr/: tcpsvr.sln  tcpsvr.vcxproj
examples/testI2C/: CMakeLists.txt
examples/testLog/: CMakeLists.txt
examples/testLog/src/: testLog.cpp
examples/testLog/testLog/: testLog.vcxproj
examples/testModbus/: CMakeLists.txt
examples/testModbus/testModbus/: testModbus.sln  testModbus.vcxproj.filters
examples/testSerial/: CMakeLists.txt
examples/testSerial/testSerial/: testSerial.sln  testSerial.vcxproj
examples/testSerialGui/: CMakeLists.txt
examples/testSerialGui/testSerialGui/: testSerialGui.vcxproj
examples/testTmr/: CMakeLists.txt
examples/testTmr/src/: testTmr.cpp
examples/testTmr/testTmr/: testTmr.sln  testTmr.vcxproj
examples/testUdp/: CMakeLists.txt  testUdp.sh
include/ce/: ceConfig.h  ceDES.h  ceDateTime.h  ceFraChecksum.h  ceFraCmd.h  ceFrame.h  ceI2C.h  ceInterface.h  ceLog.h  ceMacros.h  ceMisc.h  ceMmDateTime.h  ceModbus.h  cePCA9535.h  ceRSA_OS.h  ceSHA1.h  ceSerial.h  ceTcpClient.h  ceTcpServer.h  ceUDP.h  ceUtil.h  ceWxSerial.h  ceWxTmr.h  ceconf.h  cedes.h  cedt.h  cefracmd.h  cefracs.h  ceframe.h  cei2c.h  celog.h  cemisc.h  cemodbus.h  cepca9535x.h  cersaos.h  cesha1.h  cesha1x.h  cetcpcli.h  cetcpsvr.h  ceudp.h  (+4 more)
src/: ceConfig.cpp  ceDES.cpp  ceDateTime.cpp  ceFraChecksum.cpp  ceFraCmd.cpp  ceFrame.cpp  ceI2C.cpp  ceInterface.cpp  ceLog.cpp  ceMisc.cpp  ceMmDateTime.cpp  ceModbus.cpp  cePCA9535.cpp  ceRSA_OS.cpp  ceSHA1.c  ceSHA1.cpp  ceSerial.cpp  ceTcpClient.cpp  ceTcpServer.cpp  ceUDP.cpp  ceWxSerial.cpp  ceWxTmr.cpp  cewxcvMisc.cpp
test/: CMakeLists.txt
test/ModbusCmd/: CMakeLists.txt  ModbusCmd.sh
test/ModbusCmd/ModbusCmd/: ModbusCmd.sln  ModbusCmd.vcxproj.filters
test/ModbusCmd/src/: ModbusCmd.cpp
test/testDES/: CMakeLists.txt  main.cpp
test/testI2C/: CMakeLists.txt  testI2C.sh
test/testI2C/src/: testI2C.cpp
test/testJson/: CMakeLists.txt  main.cpp
test/testLog/: CMakeLists.txt  main.cpp  testLog.sh
test/testLog/src/: testLog.cpp
test/testLog/testLog/: testLog.sln  testLog.vcxproj  testLog.vcxproj.filters
test/testModbus/src/: testModbus.cpp
test/testModbus/testModbus/: testModbus.vcxproj
test/testRSA_OS/: CMakeLists.txt  main.cpp
test/testSHA1/: CMakeLists.txt  main.cpp
test/testSerial/: CMakeLists.txt  testSerial.sh
test/testSerial/src/: testSerial.cpp
test/testSerial/testSerial/: testSerial.vcxproj.filters
test/testSerialGui/: CMakeLists.txt
test/testSerialGui/testSerialGui/: testSerialGui.sln  testSerialGui.vcxproj  testSerialGui.vcxproj.filters
test/testTmr/: CMakeLists.txt  testTmr.sh
test/testTmr/src/: testTmr.cpp
test/testTmr/testTmr/: testTmr.vcxproj.filters
test/testUdp/: CMakeLists.txt  testUdp.sh
test/testUdp/src/: testUdp.cpp
test/testWxSerial/: CMakeLists.txt  testWxSerial.sh
vcprj/: ceutil.sln  ceutil.vcxproj  ceutil.vcxproj.filters
