cmake_minimum_required(VERSION 3.0.0)
project (ceutileg)
message(STATUS "Base dir = ${CMAKE_SOURCE_DIR}")

add_subdirectory(I2C)
add_subdirectory(kbhit)
add_subdirectory(Log)
add_subdirectory(Modbus)
add_subdirectory(Serial)
add_subdirectory(UDP)
# add_subdirectory(rsakeygen)
add_subdirectory(tcpclient)
add_subdirectory(tcpsvr)
add_subdirectory(UDP)

if(WIN32)

else()
add_subdirectory(I2C)
endif()
